--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "katex": "^0.16.28",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
